use dhifa_collection_laravel;

show tables;

desc users;

show create table users;

select * from users;

select * from products;

select * from orders;

desc orders;

show create table orders;